# agent-broker

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.code-intel/: .gitignore  chunks.tsv  code.emb  hashes.json  imports.tsv  refs.json  source-chunks.jsonl  summary.emb  typerefs.tsv
.github/workflows/: ci.yml  release.yml
architecture/: api.yaml  architecture.yaml  broker.yaml  db.yaml  identity.yaml  mcp.yaml  stanza.yaml  stories.yaml
architecture/arch/: system.arch
architecture/arch/containers/: api.arch  broker.arch  db.arch  identity.arch  mcp.arch  stanza.arch
architecture/llmcode/api/: admin.llm  middleware.llm  routes.llm  ws.llm
architecture/llmcode/broker/: delivery.llm  dispatch.llm  nonce.llm
architecture/llmcode/db/: repository.llm
architecture/llmcode/identity/: ed25519.llm  secret.llm
architecture/llmcode/mcp/: tools.llm
architecture/llmcode/stanza/: parser.llm  types.llm
broker/: Cargo.toml
broker/src/: http_frame.rs  main.rs
broker/src/api/: admin.rs  auth.rs  middleware.rs  mod.rs  routes.rs  ws.rs  ws_auth_tests.rs
broker/src/broker/: delivery.rs  dispatch.rs  mod.rs  nonce.rs  state.rs
broker/src/db/: mod.rs  repository.rs  schema.rs
broker/src/identity/: ed25519.rs  mod.rs  secret.rs
broker/src/stanza/: parser.rs  types.rs
broker/tests/: ed25519_handshake_poc.rs
cli/: Cargo.toml
cli/src/: identity.rs  listen.rs  main.rs  send.rs
mcp/: Cargo.toml
mcp/src/: main.rs  session.rs  tools.rs
src/: main.rs
src/api/: routes.rs  ws.rs
src/broker/: delivery.rs  mod.rs  state.rs
src/db/: mod.rs  repository.rs  schema.rs
src/identity/: mod.rs
src/stanza/: mod.rs  types.rs
