[package]
name = "agent-broker"
version = "0.7.0"
edition = "2024"
description = "A lightweight agent message broker — identity, presence, and message routing for AI agents across projects."

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
dirs = "6"
governor = { version = "0.6", features = ["dashmap"] }
