[package]
name = "agent-broker"
version = "0.8.0"
edition = "2024"
description = "A lightweight agent message broker — identity, presence, and message routing for AI agents across projects."

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
dirs = "6"
governor = { version = "0.6", features = ["dashmap"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"

[dev-dependencies]
rand = "0.8"
tokio-tungstenite = "0.29.0"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
