[package]
name = "broker-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for agent-broker — provides tools for AI agents to communicate via the broker."

[[bin]]
name = "broker-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
